# NBodySim

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
cmake/modules/: FindSFML.cmake
src/: BarnesHutTree.cpp  BarnesHutTree.hpp  NbodySim.cpp  NbodySim.hpp  Particle.cpp  Particle.hpp  main.cpp
